// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Phase Banner Component should be empty if no feedbackUrl or children are provided 1`] = `
<div
  class="phase-banner"
>
  <p>
    <strong
      class="phase-tag"
    >
      beta
    </strong>
  </p>
</div>
`;

exports[`The Phase Banner Component should contain any children that are passed 1`] = `
<div
  class="phase-banner"
>
  <p>
    <strong
      class="phase-tag"
    >
      beta
    </strong>
    <span>
      My own custom text
    </span>
  </p>
</div>
`;

exports[`The Phase Banner Component should contain default text and link if a feedback url is provided 1`] = `
<div
  class="phase-banner"
>
  <p>
    <strong
      class="phase-tag"
    >
      beta
    </strong>
    <span>
      This is a new service – your 
      <a
        href="http://example.com"
      >
        feedback
      </a>
       will help us to improve it.
    </span>
  </p>
</div>
`;

exports[`The Phase Banner Component should render a phase of "prototype" by default 1`] = `
<div
  class="phase-banner"
>
  <p>
    <strong
      class="phase-tag"
    >
      prototype
    </strong>
  </p>
</div>
`;

exports[`The Phase Banner Component should render the phase when provided 1`] = `
<div
  class="phase-banner"
>
  <p>
    <strong
      class="phase-tag"
    >
      beta
    </strong>
  </p>
</div>
`;
